--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 
 body {
   background-image: linear-gradient(rgb(0, 0, 12), rgb(0, 0, 27), rgb(0, 0, 27), rgb(37, 61, 97));
+
   /* overflow: scroll; */
 }
 
@@ -16,11 +17,12 @@ body {
   
 }
 .frosted {
-  background-color: rgba(214, 214, 214, 0.336);
+  background-color: rgba(0, 0, 0, 0.336);
   width: 100%;
   height: 100%;
   margin: 0;
   padding:auto;
+  color: rgb(151, 151, 151);
 }
 
 .moon {
@@ -30,4 +32,7 @@ body {
   background-color: rgba(218, 218, 218, 0.219);
   display: flex;
   align-items: center;
+}
+.container {
+  display: block;
 }
